#
# Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
# or more contributor license agreements. Licensed under the Elastic License
# 2.0 and the following additional limitation. Functionality enabled by the
# files subject to the Elastic License 2.0 may only be used in production when
# invoked by an Elasticsearch process with a license key installed that permits
# use of machine learning features. You may not use this file except in
# compliance with the Elastic License 2.0 and the foregoing additional
# limitation.
#

project("ML Ver")

include_directories(../../include)
include_directories(SYSTEM ../../3rd_party/include)

# Prepare values to substitute into the template
execute_process(COMMAND date "+%Y" OUTPUT_VARIABLE BUILD_YEAR)
string(STRIP "${BUILD_YEAR}" BUILD_YEAR)

execute_process(COMMAND id COMMAND awk -F ")" "{ print $1 }" COMMAND awk -F "(" "{ print $2 }" OUTPUT_VARIABLE USER_NAME)
string(STRIP "${USER_NAME}" USER_NAME)

execute_process(COMMAND awk -F= "/elasticsearchVersion/ {gsub(/-.*/,\"\"); print $2}" $ENV{CPP_SRC_HOME}/gradle.properties OUTPUT_VARIABLE PRODUCT_VERSION)
string(STRIP "${PRODUCT_VERSION}" PRODUCT_VERSION)

if(${VERSION_QUALIFIER})
    set(PRODUCT_VERSION "${PRODUCT_VERSION}-${VERSION_QUALIFIER}")
endif()

if(SNAPSHOT STREQUAL "yes")
    set(PRODUCT_VERSION "${PRODUCT_VERSION}-SNAPSHOT")
endif()
execute_process(COMMAND shell git rev-parse --short=14 HEAD OUTPUT_VARIABLE=ML_BUILD_NUM)

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
    execute_process(COMMAND git -c core.fileMode=false update-index -q --refresh ERROR_FILE /dev/null OUTPUT_FILE /dev/null  COMMAND git -c core.fileMode=false diff-index --quiet HEAD --  RESULT_VARIABLE UNCOMMITTED_CHANGES)
else()
    execute_process(COMMAND git update-index -q --refresh ERROR_FILE /dev/null OUTPUT_FILE /dev/null COMMAND git diff-index --quiet HEAD --  RESULT_VARIABLE UNCOMMITTED_CHANGES)
endif()

# Decide which build to perform based on whether there are uncommitted changes
if(UNCOMMITTED_CHANGES)
    add_compile_definitions(DEV_BUILD)
endif()

set(TEMPLATE "template")

set(warning.comment "DO NOT EDIT THIS FILE - instead edit the template")
set(build.year "${BUILD_YEAR}")
set(user.name "${USER_NAME}")
set(version.number "${PRODUCT_VERSION}")
set(build.number "${ML_BUILD_NUM}")
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CBuildInfo.cc.${TEMPLATE}
    ${CMAKE_CURRENT_SOURCE_DIR}/CBuildInfo.cc
    )

set(SRCS
CBuildInfo.cc
)

add_library(MlVer STATIC ${SRCS})
